hphp/test/slow/container-ref-init/pair-init.php.expectf

Fatal error: Collection element cannot be marked as reference in %s/pair-init.php on line 7
